# Project-Alice-cnfix

./: CMakeLists.txt  LOCALIZATION_ANALYSIS.md  README.md  fix-unit-name-utf8.patch
Launcher/: CMakeLists.txt
assets/: alice.gui
assets/lua/: custom_ffi.lua  loader_ui.lua
dependencies/DataContainerGenerator/: CMakeLists.txt
dependencies/DataContainerLuaGenerator/: CMakeLists.txt
dependencies/DataContainerOOSReporter/: CMakeLists.txt
dependencies/catch2/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/freetype/: CMakeLists.txt
dependencies/glew/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/luajit/: CMakeLists.txt
dependencies/tbb/: CMakeLists.txt
docs/zh-cn/: AI 逻辑.md  Project Alice 中文修正版 - Code Wiki 文档.md  about.md  accessing_data.md  bug_reports.md  contributing.md  datacontainer_serialization_tags.md  documentation.md  economy_design.md  extensions.md  game_loop_basics.md  graphics_and_gui_files.md  map_gamestate_interface.md  other_parsers.md  rules.md  scenario_loading_order.md  sound.md  super_console.md  sys_state_miscellaneous.md  tags_and_flags.md  text_data.md  the_map.md  ui_implementation.md  user_guide.md  xac_xtec_xsm.md  人口统计数据.md  修正器.md  军团招募.md  军队命令.md  军队补给.md  命名空间_sys_state_miscellaneous.md  如何升级地图.md  存档和场景文件格式.md  战争分数.md  战争地图.md  文件系统包装器.md  文本与本地化指南.md  用户界面设计.md  社区模组制作建议.md  窗口包装器.md  (+7 more)
mod/: PA Chinese MOD.txt  PA Chinese.mod
src/: entry_point_win_extra.cpp  platform_specific.cpp
src/ai/: ai.cpp  ai.hpp
src/economy/: economy_production.cpp
(+434 files in other folders)
